src/test/ui/issues/issue-39970.stderr
error[E0271]: type mismatch resolving `for<'a> <() as Array<'a>>::Element == ()`
  --> $DIR/issue-39970.rs:19:5
   |
LL |     <() as Visit>::visit();
   |     ^^^^^^^^^^^^^^^^^^^^ expected &(), found ()
   |
   = note: expected type `&()`
              found type `()`
   = note: required because of the requirements on the impl of `Visit` for `()`
note: required by `Visit::visit`
  --> $DIR/issue-39970.rs:6:5
   |
LL |     fn visit() {}
   |     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
